# cigi

./: CMakeLists.txt
include/cigi/: general.hpp  session.hpp  socket.hpp
include/cigi/host/: articulated_part_control.hpp  atmosphere_control.hpp  celestial_sphere_control.hpp  collision_detection_segment_definition.hpp  collision_detection_volume_definition.hpp  component_control.hpp  conformal_clamped_entity_control.hpp  earth_reference_model_definition.hpp  entity_control.hpp  environmental_conditions_request.hpp  environmental_region_control.hpp  hat_hot_request.hpp  ig_control.hpp  line_of_sight_segment_request.hpp  line_of_sight_vector_request.hpp  maritime_surface_conditions_control.hpp  motion_tracker_control.hpp  position_request.hpp  rate_control.hpp  sensor_control.hpp  short_articulated_part_control.hpp  short_component_control.hpp  short_symbol_control.hpp  symbol_circle_definition.hpp  symbol_clone.hpp  symbol_control.hpp  symbol_line_definition.hpp  symbol_surface_definition.hpp  symbol_text_definition.hpp  terrestrial_surface_conditions_control.hpp  trajectory_definition.hpp  view_control.hpp  view_definition.hpp  wave_control.hpp  weather_control.hpp
include/cigi/ig/: aerosol_concentration_response.hpp  animation_stop_notification.hpp  collision_detection_segment_notification.hpp  collision_detection_volume_notification.hpp  event_notification.hpp  hat_hot_extended_response.hpp  hat_hot_response.hpp  image_generator_message.hpp  line_of_sight_extended_response.hpp  line_of_sight_response.hpp  maritime_surface_conditions_response.hpp  position_response.hpp  sensor_extended_response.hpp  sensor_response.hpp  start_of_frame.hpp  terrestrial_surface_conditions_response.hpp  weather_conditions_response.hpp
source/: socket.cpp
test/: CMakeLists.txt  default_test.cpp  host_packets.cpp  ig_packets.cpp  other.cpp
